fix projects grid padding overflow

--- a/src/Components/Projects/Projects.style.css
+++ b/src/Components/Projects/Projects.style.css
@@ -1,7 +1,7 @@
 .projects{
     display: grid;
     min-height: 100vh;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(186px, 1fr));
     gap: 2rem;
     color: #fff;
 }
@@ -17,9 +17,10 @@
     align-items: center;
     flex-direction: column;
     gap: 2rem;
-    padding: 2rem;
-    border: 0.2em solid black;
+    padding: 1.5rem;
+    border: 0.2em solid #AFADA9;
     border-radius: 5px;
+    height: fit-content;
 
 }
 
@@ -32,6 +33,8 @@
 .project-card-detail {
     display: flex;
     flex-flow: column nowrap;
+    width: 100%;
+    align-items: center;
 }
 .project-card-name{
     text-decoration: underline;
@@ -53,9 +56,10 @@
 }
 .project-card-detail-techstacks{
     display: flex;
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
     gap: 1rem;
     margin-bottom: 1rem;
+    justify-content: center;
 }
 
 .project-card-detail-techstacks-single{
